# unitTests-quality-plan

./: .codespell.ignorewords  .flake8  .gitignore  .mutmut-config  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  config.toml  cosmic-ray-report.json  pyproject.toml  requirements.txt
scripts/: check_mutation_threshold.py  mutation_check.py  mutmut_check.py
src/: demo.py  ejecutar_demo.py  pokemon.py
tests/: prueba.py  test_demo.py  test_invalid.py  test_pokemon.py
